# pulse

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  Taskfile.yaml  package-lock.json  pyproject.toml
apps/common/: erp.py
apps/core/: apps.py  urls.py  views.py
apps/customers/: admin.py  apps.py  models.py  urls.py
apps/customers/management/commands/: load_customer_ledger_entries.py  load_customers.py
apps/customers/migrations/: 0001_initial.py  0002_alter_customer_code_alter_historicalcustomer_code.py  0003_customerledgerentry_historicalcustomerledgerentry.py  0004_alter_customerledgerentry_customer.py
apps/users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
config/: settings.py  urls.py
static/css/: output.css
templates/: base.html
templates/core/: index.html
templates/users/: login.html
